<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp">
        <TextView
            android:id="@+id/E_ID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_id"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/E_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_name"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/E_Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_age"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/E_Designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_designation"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/E_Salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_salary"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/E_Bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/e_bonus"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>